--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 <body>
-    <h1>Test hej 13</h1>
+    <div id="el" data-value="0">
+        <span id="needle"></span>
+      </div>
+      <strong>hover</strong>
+      
+      <h1>speedometer experiment</h1>
+      <p>Have fun with this little speedometer experiment. <br>The javascript is only needed to update the text!</p>
     <script src="app.js"></script>
 </body>
 </html>
