--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       </div>
       <strong>Hover</strong>
       
-      <h1>speedometer experiment cc</h1>
+      <h1>speedometer experiment</h1>
       <p>Have fun with this little speedometer experiment. <br>The javascript is only needed to update the text!</p>
     <script src="app.js"></script>
 </body>
