Update index.html line 14 remove 1

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="el" data-value="0">
         <span id="needle"></span>
       </div>
-      <strong>Hover 1</strong>
+      <strong>Hover</strong>
       
       <h1>speedometer experiment</h1>
       <p>Have fun with this little speedometer experiment. <br>The javascript is only needed to update the text!</p>
